# dqms

./: Makefile  README.md  build_docs.sh  pyproject.toml  tox.ini
.github/workflow/: ci.yml
.github/workflows/: check.yml  main.yml
docs/: conf.py  index.rst  modules.rst
dqms/core/: calculator.py
tests/core/unit/: test_calculator.py
tests/unit/: test_calculator.py
